--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "npm run build && node dist/dayplanner-tests.js",
     "dev": "ts-node --transpile-only dayplanner-tests.ts",
     "test": "npm run build && node dist/dayplanner-tests.js",
+    "test2": "npm run build && node dist/generator-tests.js",
     "manual": "npm run build && node -e \"require('./dist/dayplanner-tests.js').testManualScheduling()\"",
     "llm": "npm run build && node -e \"require('./dist/dayplanner-tests.js').testLLMScheduling()\"",
     "mixed": "npm run build && node -e \"require('./dist/dayplanner-tests.js').testMixedScheduling()\""
